@@ -1,5 +1,9 @@
 2004-10-05  Derek Price  <derek@ximbiot.com>
 
+	* filesubr.c (xresolvepath): s/xgetwd/xgetcwd/.
+
+2004-10-05  Derek Price  <derek@ximbiot.com>
+
 	* config.h.in.in: #undef USE_UNLOCKED_IO.
 
 2004-09-17  Derek Price  <derek@ximbiot.com>
